--- a/src/Msp/FrontendBundle/Resources/views/Page/faq.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/Page/faq.html.twig
@@ -124,8 +124,8 @@
                 technologie d’aujourd’hui. Plus qu’un blog, nous tentons de créer une connexion entre les 
                 étudiants et les mathématiques.
             </p>
-            <p>
-                <strong class="blue">En effet, les mathématiques jugées ennuyeuses et trop sérieuses, peuvent être ludiques et à caractère créatif.</strong>
+            <p class="faq-top">
+                <strong>En effet, les mathématiques jugées ennuyeuses et trop sérieuses, peuvent être ludiques et à caractère créatif.</strong>
             </p>
             <p>
                 Il s’agit d’une autre vision des mathématiques, nous invitons chacun de nos élèves à suivre ce blog updater chaque mois. Ou via Twitter – Facebook.
