--- a/src/Msp/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/Msp/UserBundle/Resources/views/Security/login.html.twig
@@ -34,7 +34,7 @@
         <label for="password">{{ 'security.login.password'|trans({}, 'FOSUserBundle') }}</label>
         <input type="password" id="password" name="_password" placeholder="Mot de passe" required="required" /><br/>
 
-        <label for="remember_me">
+        <label for="remember_me" class="checkbox">
             <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
             {{ 'security.login.remember_me'|trans({}, 'FOSUserBundle') }}
         </label><br/>
