END MODIFICATION MATHSUP

--- a/src/Msp/FrontendBundle/Resources/views/Page/college.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/Page/college.html.twig
@@ -189,6 +189,10 @@
                     </ul>                    
                 </div>
                 
+                <div class="text-center margin-top-medium">
+                    <a title="Retour au menu principal" id="btn_up" class="btn text-center" href="#"><i class="icon-arrow-up"></i></a>
+                </div >
+                
                 <footer class="footer">
                     <strong>Nos cours associés</strong>
                     Je recherche un cours de sixième.
@@ -311,6 +315,10 @@
                         <li>d’apprendre à choisir les unités adaptées et à effectuer des changements d’unité.</li>    
                     </ul>                    
                 </div>
+                
+                <div class="text-center margin-top-medium">
+                    <a title="Retour au menu principal" id="btn_up" class="btn text-center" href="#"><i class="icon-arrow-up"></i></a>
+                </div >
                 
                 <footer class="footer">
                     <strong>Nos cours associés</strong>
@@ -435,6 +443,10 @@
                         <li>de savoir choisir les unités adaptées et d’effectuer les changements d’unités.</li>                        
                     </ul>                    
                 </div>
+                
+                <div class="text-center margin-top-medium">
+                    <a title="Retour au menu principal" id="btn_up" class="btn text-center" href="#"><i class="icon-arrow-up"></i></a>
+                </div >
                 
                 <footer class="footer">
                     <strong>Nos cours associés</strong>
@@ -583,7 +595,11 @@
                     </ul>                    
                 </div>
                 
-                <footer class="footer">
+                <div class="text-center margin-top-medium">
+                    <a title="Retour au menu principal" id="btn_up" class="btn text-center" href="#"><i class="icon-arrow-up"></i></a>
+                </div >
+                
+                <footer class="footer">                    
                     <strong>Nos cours associés</strong>
                     Je recherche un cours de troisième.
                     <a href="#"><img src="{{ asset('/img/arrow-right.jpg') }}" alt="En savoir plus" /></a>
