--- a/src/Msp/FrontendBundle/Resources/views/Page/lycee.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/Page/lycee.html.twig
@@ -78,6 +78,10 @@
                     </p>
                 </div>
                 
+                <div class="text-center margin-top-medium">
+                    <a title="Retour au menu principal" id="btn_up" class="btn text-center" href="#"><i class="icon-arrow-up"></i></a>
+                </div >
+                
                 <footer class="footer">
                     <strong>Nos cours associés</strong>
                     Je recherche un cours de seconde.
